Adicionando paginação no resource users.